--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 
-  <title>Arkib MRSM Gemencheh</title>
+  <title>BKP MRSM Gemencheh</title>
 
   <meta name="description" content="Laman sesawang Badan Kepimpinan Pelajar MRSM Gemencheh!">
 
@@ -14,10 +14,6 @@
 
   <link rel="stylesheet" href="css/addon.css">
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin="" />
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -25,12 +21,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"
     integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-  <!-- Make sure you put this AFTER Leaflet's CSS -->
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-    crossorigin=""></script>
-
 
   <link rel="manifest" href="manifest.json">
 
@@ -40,23 +30,16 @@
     }
   </script>
 
-
+  <script defer src="/index.js"></script>
 
   <style>
     i {
       padding: 4px;
     }
-
-    #mapid {
-      width: 180px;
-      height: auto;
-    }
   </style>
 </head>
 
 <body>
-
-
   <section class="hero is-primary is-medium">
     <!-- Hero head: will stick at the top -->
     <div class="hero-head">
@@ -93,7 +76,7 @@
     <div class="hero-body">
       <div class="container has-text-centered">
         <p class="title">
-          Selamat datang ke Arkib MRSM Gemencheh!
+          Selamat datang ke laman sesawang BKP MRSM Gemencheh!
         </p>
         <p class="subtitle">
           "Dipimpin untuk memimpin"
@@ -124,16 +107,16 @@
         </div>
       </nav>
     </div>
-
+    
   </section>
 
 
-
+  
   <div class="section">
 
     <div class="content">
 
-      <h1>Arkib Badan Kepimpinan Pelajar</h1>
+      <h1>Badan Kepimpinan Pelajar</h1>
       <p>Peranan Badan Kepimpinan Pelajar adalah untuk memimpin para pelajar untuk mematuhi peraturan yang ditetapkan
         oleh pihak maktab, serta menganjurkan pelbagai aktiviti untuk tujuan peningkatan nilai para pelajar.</p>
       <div class="box">
@@ -146,14 +129,14 @@
           </div>
           <div class="column">
             <button class="button is-primary">
-              <i class="fas fa-users"></i>
-              <a href="prs.html"><b>Pembimbing Rakan Sebaya</b></a>
+              <i class="fas fa-book-open"></i>
+              <a href="emc.html"><b>English Motivational Committee</b></a>
             </button>
           </div>
           <div class="column">
             <button class="button is-primary">
-              <i class="fas fa-book-open"></i>
-              <a href="emc.html"><b>English Motivational Committee</b></a>
+              <i class="fas fa-users"></i>
+              <a href="prs.html"><b>Pembimbing Rakan Sebaya</b></a>
             </button>
           </div>
         </div>
@@ -177,29 +160,11 @@
             </button>
           </div>
         </div>
-
       </div>
 
     </div>
   </div>
 
-
-
-
-
-
-  <div class="section">
-    <div class="content">
-      <h1>Lokasi MRSM Gemencheh</h1>
-
-      <div class="box">
-
-        <div id="mapid" style="width: auto; height: 400px;"></div>
-
-
-      </div>
-    </div>
-  </div>
 
   <!-- <div class="section">
     <div class="content">
@@ -249,8 +214,7 @@
           <button class="delete" aria-label="delete"></button>
         </div>
         <div class="message-body">
-          Spot a typo? Want to add something? Put up an issue <a
-            href="https://github.com/MRSM-Gemencheh/MRSM-Gemencheh.github.io/issues">here</a> to let the dev team know!
+         Spot a typo? Want to add something? Put up an issue <a href="https://github.com/MRSM-Gemencheh/MRSM-Gemencheh.github.io/issues">here</a> to let the dev team know!
         </div>
       </article>
     </div>
@@ -267,8 +231,6 @@
       </p>
     </div>
   </footer>
-
-  <script defer src="/index.js"></script>
 </body>
 
 </html>
